# mmm

./: .gitignore  CLAUDE.md  Makefile  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wxt.config.ts
.trae/rules/: rules.md
entrypoints/: background.ts  content.ts
entrypoints/popup/: Popup.vue  index.html  main.js
scripts/: watch.js
src/: App.css  App.tsx  App.vue  i18n.ts  main.ts  main.tsx  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: BrowserPanel.vue  ConfirmModal.tsx  MonitorPanel.tsx  MonitorPanel.vue
src/hooks/: useMinMaxAuth.ts  useMinMaxWebview.ts  useNotification.ts  useUsage.ts
src/logic/: parser.js  test_parser.js  test_puppeteer.js
tests/: usage.spec.ts
